# QNS

./: .gitignore  .rustfmt.toml  CITATION.cff  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: ci.yml
_legacy/: DEPLOYMENT_CHECKLIST.md  PPR_Gantree_V4.md  QNS_Qiskit_Implementation_Roadmap.md  QNS_Qiskit_Integration_Gantree.md  QNS_Technical_Specification_v2.1.md  QNS_Technical_Specification_v2.1_kr.md  Sprint3_Completion_Report.md  bell.qasm  sprint3_ideal_results.json  sprint3_simplified_results.json  test_bell.qasm
_legacy/docs/: Benchmark_Critical_Review.md  Phase2_Critical_Review.md  QNS v1.0 AI 평가 분석 및 개선 계획.md  QNS_Benchmark_Results.md  QNS_Crosstalk_Model_Gantree.md  QNS_Hardware_Validation_Report.md  QNS_Integrated_Specification.md  QNS_Paper_Draft_npjQI.md  QNS_Paper_Revision_Plan_v1.md  QNS_Phase3_Sprint_Plan.md  QNS_Phase3_Upgrade_Gantree.md  QNS_Project_Status_Report.md  QNS_Publication_Strategy.md  QNS_TRL_Strategy.md  QNS_Technical_Specification_v1.0.md  QNS_Technical_Specification_v2.0_kr.md  QNS_Technical_Specification_v2.3.md  QNS_Technical_Specification_v2.3_kr.md  QNS_Technical_Whitepaper.md  QNS_arXiv_Paper_Draft.md  QNS_arXiv_Supplementation_Plan.md  QNS_arXiv_Supplementation_Report.md  QNS_v2.0_Final_Report.md  arXiv_QNS_Preprint.md  qns_dashboard_guide.md  qns_mvp_design.md  qns_mvp_design_v2.md  qns_rust_implementation_plan.md  논문초안평가서모음.md  평가모음.md
_legacy/docs/literature_analysis/: prior_work_comparison.md
_legacy/old_python/qns-python/: Cargo.toml  pyproject.toml
_legacy/old_python/qns-python/src/: circuit.rs  lib.rs
_legacy/results/: e2e_validation_results.csv  fidelity_benchmark.csv  placement_results.csv  qiskit_comparison.json  qns_benchmark_summary.json  summary.json  table_benchmark.tex  table_e2e_validation.tex  table_placement_results.tex
benchmarks/: README.md  ablation_study.py  aer_noisy_benchmark_suite.py  arxiv_benchmark.py  crosstalk_weight_sweep.py  generate_scalability_figure.py  hardware_verification.py  run_tket_comparison.py  scalability_benchmark.py  scalability_simulation.py  statistical_analysis.py  tket_vs_qns_fidelity.py  validate_optimization_concept.py  validate_qns_optimization.py  verify_python_binding.py  zne_demonstration.py
benchmarks/circuits/: ghz_3q.qasm  qelib1.inc  qft_4q.qasm
benchmarks/qasmbench/: adder_n4.qasm  bv_n4.qasm  dj_n4.qasm  ghz_n4.qasm  ghz_n6.qasm  grover_n4.qasm  qaoa_n4.qasm  qelib1.inc  qft_n4.qasm  qft_n6.qasm  qpe_n4.qasm  simon_n4.qasm  supremacy_n4.qasm  teleport_n3.qasm  vqe_n4.qasm  wstate_n3.qasm
benchmarks/results/: qns_benchmark_results.csv  qns_benchmark_results.json  scalability_results.csv
benchmarks/results/aer_noisy_suite/: GHZ_4.qasm  QFT_4.qasm  benchmark_results.csv  benchmark_results.json  qelib1.inc
benchmarks/results/crosstalk_sweep/: crosstalk_sweep_results.csv  crosstalk_sweep_results.json
crates/qns_cli/: Cargo.toml
crates/qns_cli/src/: lib.rs  main.rs  pipeline.rs  qiskit_runner_stub.rs  server.rs
crates/qns_cli/tests/: integration.rs
crates/qns_core/: Cargo.toml
crates/qns_core/src/: backend.rs  config.rs  error.rs  lib.rs  physics.rs  prelude.rs
crates/qns_core/src/types/: circuit_genome.rs  gate.rs  hardware_profile.rs  loader.rs  mod.rs  noise_vector.rs
crates/qns_noise/: Cargo.toml
crates/qns_noise/src/: channels.rs  error.rs  lib.rs
crates/qns_profiler/: Cargo.toml
crates/qns_profiler/benches/: drift_scan.rs
crates/qns_profiler/src/: lib.rs
crates/qns_profiler/src/drift_scan/: compute.rs  measure.rs  mod.rs  scanner.rs
crates/qns_python/: Cargo.toml  README.md  pyproject.toml  requirements.txt
crates/qns_python/python/: cli_runner.py  qiskit_bridge.py
crates/qns_python/python/qns/: __init__.py  ibm.py  qns.pyi
crates/qns_python/scripts/: run_ibm_benchmark.py
crates/qns_python/src/: backend.rs  convert.rs  lib.rs  optimizer.rs  types.rs
crates/qns_python/tests/: conftest.py  test_direct_bridge.py  test_e2e_integration.py  test_ibm.py  test_qiskit_bridge.py  test_qns.py  test_sprint2_ibm.py
crates/qns_qasm/: Cargo.toml
crates/qns_qasm/src/: ast.rs  builder.rs  error.rs  lib.rs  parser.rs  preprocessor.rs
crates/qns_rewire/: Cargo.toml
crates/qns_rewire/benches/: rewire.rs
crates/qns_rewire/examples/: co_optimization_benchmark.rs  crosstalk_tuning.rs  e2e_validation.rs  fidelity_benchmark.rs  hardware_aware_benchmark.rs  heavy_hex_benchmark.rs  placement_benchmark.rs
crates/qns_rewire/src/: details.rs  lib.rs  scoring.rs
crates/qns_rewire/src/gate_reorder/: mod.rs
crates/qns_rewire/src/graph/: mod.rs
crates/qns_rewire/src/live_rewirer/: mod.rs
crates/qns_rewire/src/router/: basic.rs  mod.rs  noise_aware.rs  placement.rs  sabre.rs
crates/qns_rewire/tests/: crosstalk_routing.rs
crates/qns_simulator/: Cargo.toml
crates/qns_simulator/benches/: simulator.rs
crates/qns_simulator/src/: backend.rs  lib.rs  mock.rs  mps.rs  noise.rs  noisy.rs
crates/qns_simulator/src/state_vector/: mod.rs
crates/qns_simulator/tests/: crosstalk_verification.rs
crates/qns_tensor/: Cargo.toml
crates/qns_tensor/src/: lib.rs
crates/qns_zne/: Cargo.toml
crates/qns_zne/src/: config.rs  error.rs  executor.rs  extrapolator.rs  folding.rs  lib.rs
docs/: Crosstalk_Model_Usage.md  QNS_Benchmark_Results.md  QNS_Mathematical_Formalization.md  QNS_Qiskit_Usage_Examples.md  QNS_Technical_Specification_v2.2.md  QNS_Technical_Specification_v2.2_kr.md  QNS_Technical_Specification_v2.4.md  QNS_Technical_Specification_v2.5.md  QNS_Upgrade_Plan.md  QNS_Weight_Guidelines.md  QNS_v2.5_Work_Plan.md
docs/paper/: QNS_Paper.md  references.bib
docs/paper/final_submission/: QNS_Paper.tex  (+2 more)
examples/: qiskit_demo.py
papers/: TNQC_arXiv.md
scripts/: ablation_study.py  bench_report.sh  benchmark.py  generate_paper_figures.py  paper_data_collector.py  qiskit_comparison.py  requirements.txt  statistical_validation.py  verify_crosstalk_fetch.py
scripts/figures/: generate_fig1_pipeline.py  generate_fig2_fidelity_model.py  generate_fig3_benchmarks.py  generate_fig4_scaling_zne.py  generate_fig5_circuit_opt.py
