[package]
name = "qns_profiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Noise profiler for QNS (Quantum Noise Symbiote)"

[dependencies]
qns_core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "drift_scan"
harness = false
