[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "qns-python"
version = "0.1.0"
description = "Python bindings for QNS quantum simulator"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Jung Wook Yang", email = "sadpig70@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.0", "black>=23.0"]
viz = ["matplotlib>=3.5", "numpy>=1.20"]

[tool.maturin]
python-source = "python"
module-name = "qns._qns"
